name:                nexo
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/bradrn/supercell#readme
-- license:             BSD3
-- license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2021 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

library
  hs-source-dirs:      src
  exposed-modules:     Nexo.Interpret
                     , Nexo.Core.Solve
                     , Nexo.Core.Substitute
                     , Nexo.Core.Type
                     , Nexo.Core.Typecheck
                     , Nexo.Env
                     , Nexo.Env.Std
                     , Nexo.Expr.Parse
                     , Nexo.Expr.Type
                     , Nexo.Expr.Unit
                     , Nexo.Sheet
                     , Nexo.Test
  default-language:    Haskell2010
  ghc-options:         -Wall
  build-depends:       base >= 4.7 && < 5
                     , containers >= 0.6 && < 0.7
                     , data-fix >= 0.3 && < 0.4
                     , deriving-compat >= 0.5 && < 0.6
                     , megaparsec >= 8.0 && < 9.1
                     , mtl >= 2.2 && < 2.3
                     , parser-combinators >= 1.2 && < 1.3
                     , recursion-schemes >= 5.1 && < 5.3

test-suite nexo-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Main.hs
  build-depends:       base >= 4.7 && < 5
                     , nexo
                     , tasty >= 1.2 && < 1.5
                     , tasty-hunit >= 0.10 && < 0.11
                     , containers >= 0.6 && < 0.7
