name:                supercell
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/supercell#readme
-- license:             BSD3
-- license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2021 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable supercell
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  ghc-options:         -O2 -Wall
  build-depends:       base >= 4.7 && < 5
                     , comonad >= 5.0 && < 5.1
                     , containers >= 0.6 && < 0.7
                     , data-fix >= 0.3 && < 0.4
                     , deriving-compat >= 0.5 && < 0.6
                     , free >= 5.1 && < 5.2
                     , megaparsec >= 9.0 && < 9.1
                     , mtl >= 2.2 && < 2.3
                     , parser-combinators >= 1.2 && < 1.3
                     , recursion-schemes >= 5.2 && < 5.3
                     , threepenny-gui >= 0.9 && < 0.10
