name:                nexo-interop
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/bradrn/supercell#readme
-- license:             BSD3
-- license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2021 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

library
  hs-source-dirs:      .
  exposed-modules:     Interop
  default-language:    Haskell2010
  ghc-options:         -Wall -stubdir stub -o nexo-interop.a -static -optl-static -staticlib
  build-depends:       base >= 4.7 && < 5
                     , nexo
                     , containers >= 0.6 && < 0.7
                     , data-fix >= 0.3 && < 0.4
                     , free >= 5.1 && < 5.2
